Wed Jun  3 01:15:02 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/opensplice/SimpleExample/OpenSplice_SimpleComponent_svnt.h:
        * examples/arch/opensplice/SimpleExample/OpenSplice_SimpleComponent_svnt.cpp:
        * examples/arch/opensplice/SimpleExample/SimpleComponent.cidl:
        * examples/arch/opensplice/SimpleExample/SimpleComponent.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Base.mpc:

	  . Checkpointing the example.

Wed Jun  3 01:12:41 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/opensplice/SimpleExample/SimpleComponent_Impl.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleExample.mwc:

          . Checkpointing the example.

        * examples/arch/opensplice/SimpleExample/SimpleComponent.mpc:
        * examples/arch/opensplice/SimpleExample/SubAppDDSComponent.idl:

          Removed these files.

Wed Jun  3 00:41:31 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_Context_T.h:
        * cuts/arch/ccm/CCM_Context_T.inl:
        * cuts/arch/ccm/CCM_Context_T.cpp:

          . Moved the template context from TCP/IP.

        * cuts/arch/tcpip/ccm/TCPIP_CCM_Context_T.h:

          . Removed the export include file since it is not necessary
            for template files.

Wed Jun  3 00:24:11 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/opensplice/SimpleExample/ModelDDSData_Base.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleComponent.idl:
        * examples/arch/opensplice/SimpleExample/SimpleComponent.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleExample.mwc:

          . Checkpoint the example.

        * examples/arch/opensplice/SimpleExample/PubAppDDSComponent.idl:
        * examples/arch/opensplice/SimpleExample/SimpleExample.mpc:
        * examples/arch/opensplice/SimpleExample/base.mpb:

          Removed these files.
